# logrich

./: .env.template  .gitignore  .pre-commit-config.yaml  .testmondata  CHANGELOG.md  README.md  config.py  conftest.py  pyproject.toml  ruff.toml  tox.ini
logger/: color_scheme.py  config.py  logger_.py  logger_assets.py
logger_mdv/: logger_.py  logger_assets.py
logrich/: logger_assets.py
nice_logger/: logger_.py  logger_assets.py
server/: .testmondata  config.py  conftest.py  pyproject.toml
tests/: test_1.py  test_2.py  tst2.py
wiki/: COMMAND.md
