[tool.poetry]
name = "logger"
version = "0.0.1"
description = "loguru + rich = logger"
authors = ["Dmitry Mavlin <mavlind@list.ru>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
toml = "0.10.2"
watchdog = "2.0.3"
loguru = "^0.6.0"
rich = "^12.4.4"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
pre-commit = "^2.19.0"
# logger = {path = "../../logger", develop = true}
# logger = {path = "../../libs/logger", develop = true}
# libtelemetry = {path = "../../libs/libtelemetry", develop = true}

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
pytest-picked = "0.4.6"
pytest-testmon = "1.1.1"
pytest-watch = "4.2.0"
black = "^22.1.0"
pylint = "^2.12.2"
pytest-aiohttp = "^1.0.4"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
quiet = true
fast = true
